// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept status 1`] = `
Array [
  .c0 {
  width: 100%;
  height: 6px;
  background: rgba(51,51,51,0.04);
  border-radius: 999rem;
}

.c0 .c1 {
  height: 100%;
  border-radius: 999rem;
}

<div
    className="c0"
  >
    <div
      className="c1 "
      style={
        Object {
          "background": "rgba(0,217,72,1)",
          "transition": "width 150ms cubic-bezier(0.4, 0, 0.2, 1)",
          "width": "10%",
        }
      }
    />
  </div>,
  .c0 {
  width: 100%;
  height: 6px;
  background: rgba(51,51,51,0.04);
  border-radius: 999rem;
}

.c0 .c1 {
  height: 100%;
  border-radius: 999rem;
}

<div
    className="c0"
  >
    <div
      className="c1 "
      style={
        Object {
          "background": "rgba(255,43,0,1)",
          "transition": "width 150ms cubic-bezier(0.4, 0, 0.2, 1)",
          "width": "10%",
        }
      }
    />
  </div>,
]
`;

exports[`should disable animate 1`] = `
.c0 {
  width: 100%;
  height: 6px;
  background: rgba(51,51,51,0.04);
  border-radius: 999rem;
}

.c0 .c1 {
  height: 100%;
  border-radius: 999rem;
}

<div
  className="c0"
>
  <div
    className="c1 "
    style={
      Object {
        "background": "rgba(26,122,248,1)",
        "transition": undefined,
        "width": "10%",
      }
    }
  />
</div>
`;

exports[`should render correctly 1`] = `
.c0 {
  width: 100%;
  height: 6px;
  background: rgba(51,51,51,0.04);
  border-radius: 999rem;
}

.c0 .c1 {
  height: 100%;
  border-radius: 999rem;
}

<div
  className="c0"
>
  <div
    className="c1 "
    style={
      Object {
        "background": "rgba(26,122,248,1)",
        "transition": "width 150ms cubic-bezier(0.4, 0, 0.2, 1)",
        "width": "0%",
      }
    }
  />
</div>
`;
